fix for page header actions extra padding

--- a/src/page-header/page-header.less
+++ b/src/page-header/page-header.less
@@ -34,7 +34,7 @@
 .page-header-actions {
     order: 2;
     display: flex;
-    padding: 0 unit(@padding,px);
+    padding: 0 unit(@padding-half,px);
 }
 
 .page-header-actions-item {
